Seeders and create closing checklist

--- a/angular/src/index.html
+++ b/angular/src/index.html
@@ -27,7 +27,10 @@
     <link href="./assets/css/demo1/skins/header/base/light.css" rel="stylesheet" type="text/css" />
     <link href="./assets/css/demo1/skins/header/menu/light.css" rel="stylesheet" type="text/css" />
     <link href="./assets/css/demo1/skins/brand/dark.css" rel="stylesheet" type="text/css" />
-    <link href="./assets/css/demo1/skins/aside/dark.css" rel="stylesheet" type="text/css" />        <!--end::Layout Skins -->
+    <link href="./assets/css/demo1/skins/aside/dark.css" rel="stylesheet" type="text/css" />  
+    <link href="./assets/vendors/custom/fullcalendar/fullcalendar.bundle.css" rel="stylesheet" type="text/css" />
+
+    <!--end::Layout Skins -->
     
    
 </head>
