--- a/angular/src/index.html
+++ b/angular/src/index.html
@@ -24,10 +24,12 @@
     
     <!--begin:: Global Mandatory Vendors -->
     <link href="./assets/vendors/general/perfect-scrollbar/css/perfect-scrollbar.css" rel="stylesheet" type="text/css" />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="./assets/css/demo1/skins/header/base/light.css" rel="stylesheet" type="text/css" />
     <link href="./assets/css/demo1/skins/header/menu/light.css" rel="stylesheet" type="text/css" />
     <link href="./assets/css/demo1/skins/brand/dark.css" rel="stylesheet" type="text/css" />
-    <link href="./assets/css/demo1/skins/aside/dark.css" rel="stylesheet" type="text/css" />  
+    <link href="./assets/css/demo1/skins/aside/dark.css" rel="stylesheet" type="text/css" /> 
+    <link href="./assets/vendors/custom/uppy/uppy.bundle.css" rel="stylesheet" type="text/css" /> 
     <link href="./assets/vendors/custom/fullcalendar/fullcalendar.bundle.css" rel="stylesheet" type="text/css" />
 
     <!--end::Layout Skins -->
@@ -124,4 +126,6 @@
                         <!--begin::Page Scripts(used by this page) -->
                                 <script src="./assets/js/demo1/pages/components/calendar/list-view.js" type="text/javascript"></script>
     
+                                <script src="./assets/vendors/custom/uppy/uppy.bundle.js" type="text/javascript"></script>
+                            <script src="./assets/js/demo1/pages/crud/file-upload/uppy.js" type="text/javascript"></script>
 </body>
