--- a/angular/src/account/register/tenant-register-user-result.component.htm
+++ b/angular/src/account/register/tenant-register-user-result.component.htm
@@ -1,1 +1,22 @@
-<p>Thanks please check your email</p>
+<div class=""style="padding:10% 30%">
+    <div class="kt-container kt-grid__item kt-grid__item--fluid py-5">
+        <div class="kt-portlet py-5">
+            <div class="d-flex justify-content-center"> 
+                <h3>You have Registered Successfully</h3>
+            </div>
+            <div class="d-flex justify-content-center">
+                <img src="./assets/media/ClosingCheckList/success.png" alt="block-btn">                  
+            </div>
+            <div class="d-flex justify-content-center"> 
+                <h5>Please check your email</h5>
+                
+            </div>
+            <div class="d-flex justify-content-center"> 
+                <p><a routerLink="/account/login" 
+                    class="text-black"><u>Go to Log In</u></a>
+                </p>
+                
+            </div>
+        </div>
+    </div>
+</div>
